--- a/config/database.yml
+++ b/config/database.yml
@@ -82,22 +82,5 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: myapp_production
-    username: myapp
-    password: <%= ENV["MYAPP_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: myapp_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: myapp_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: myapp_production_cable
-    migrations_paths: db/cable_migrate
-  adapter: postgresql
-  url: postgres://koyeb-adm:npg_9oUGLBPqze3l@ep-orange-sun-a4ht4vc8.us-east-1.pg.koyeb.app/koyebdb
+  <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
